css/style2.css
body  {
	background-color: beige;
	--nbOr: calc(165580141 / 102334155);
	--ratio: var(--nbOr);
	--bWidth: 10vw;
	--bHeight: calc(var(--bWidth) / var(--ratio));
	--hSpace: calc(var(--bHeight) / var(--ratio));
	--hWorkZone: calc(var(--bHeight) * 3 + var(--hSpace) * 1);
	--wTime: calc(65vw - (var(--bWidth) * 3 + var(--bHeight) * 2));
	--workSetTop: calc(var(--hSpace) * 3 + var(--bHeight) * 2);
	--breakSetTop: calc(var(--hSpace) * 3.5 + var(--bHeight) * 3);
	--chillSetTop: calc(var(--hSpace) * 4 + var(--bHeight) * 4);
}

#play, #stop, #time, #next  {
	position: absolute;
	height: var(--bHeight);
	width: var(--bWidth);
	font-size: calc(var(--bHeight) / 2);
	text-align: center;
	line-height: var(--bHeight);
	overflow: hidden;
	border-radius: var(--bHeight);
}

#play {
	top: var(--hSpace);
	left: 5vw;
	background-color: green;
}

#stop {
	top: var(--hSpace);
	right: 5vw;
	background-color: red;
}

#next {
	top: var(--hSpace);
	left: calc(10vw + var(--bWidth));
	background-color: orange;
}

#play:hover {
	cursor: wait;
}

#stop:hover {
	cursor: not-allowed;
}

#next:hover {
	cursor: e-resize;
}

#time {
	top: var(--hSpace);
	left: calc(20vw + var(--bWidth) * 2 + var(--bHeight));
	width: var(--wTime);
	font-size: var(--bHeight);
	background-color: beige;
}

.staminaBox, .staminaText {
	position: absolute;
	top: calc(var(--hSpace) * 2 + var(--bHeight));
	left: 5vw;
	height: var(--bHeight);
	width: 90vw;
	text-align: center;
	border: 1px solid;
	border-radius: var(--bHeight);
	overflow: hidden;
}

.staminaText {
	left: 20vw;
	width: 60vw;
	margin: 0;
	padding: 0;
	font-size: var(--bHeight);
	line-height: var(--bHeight);
	z-index: 100;
	border: none;
}

#staminaBar {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	background-color: green;
	z-index: 50;
}


.clock {
	position: absolute;
	top: var(--hSpace);
	width: var(--bHeight);
	height: var(--bHeight);
	border: 1px solid black;
	border-radius: 100%;
	text-align: center;
}

.clock-now {
	left: calc(15vw + var(--bWidth) * 2);
}

.clock-chrono {
	left: calc(25vw + var(--bWidth) * 2 + var(--bHeight) + var(--wTime));
}

.clock-time {
	--fontHeight: 1vw;
	position: absolute;
	top: calc(0px - var(--fontHeight) /* * 1.125*/);
	left: 50%;
	width: 1px;
	height: calc(var(--bHeight) / 2 + var(--fontHeight) /* * 1.125*/);
	font-size: var(--fontHeight);
	line-height: var(--fontHeight);
    transform-origin: 0 100%;
}

.clock-time span {
	width: 1.2vw;
	position: absolute;
	left: -0.6vw;
	/*color: blue;*/
}
/*
.clock-time span strong {
	color: red;
	font-size: calc(var(--fontHeight) * 1.25);
	line-height: calc(var(--fontHeight) * 1.25);
}
*/
.clock .cinq {
    transform: rotate(30deg);
}

.clock .dix {
    transform: rotate(60deg);
}

.clock .quinze {
    transform: rotate(90deg);
}

.clock .vingt {
    transform: rotate(120deg);
}

.clock .vingt-cinq {
    transform: rotate(150deg);
}

.clock .trente {
    transform: rotate(180deg);
}

.clock .trente-cinq {
    transform: rotate(210deg);
}

.clock .quarante {
    transform: rotate(240deg);
}

.clock .quarante-cinq {
    transform: rotate(270deg);
}

.clock .cinquante {
    transform: rotate(300deg);
}

.clock .cinquante-cinq {
    transform: rotate(330deg);
}

#hour, #hourF, #min, #minF, #sec, #secF {
	position: absolute;
	top: 50%;
	margin: auto;
	transform-origin: center top;
}

#hour, #hourF {
	width: 4px;
	left: calc(50% - 2px);
	height: 25%;
	background-color: red;
}

#hourF {
	background-color: black;
}

#min, #minF {
	width: 2px;
	left: calc(50% - 1px);
	height: 35%;
	background-color: blue;
}

#minF {
	background-color: red;
}

#sec, #secF {
	width: 1px;
	left: calc(50% - 0.5px);
	height: 45%;
	background-color: black;
}

#secF  {
	background-color: blue;
}

/* Merci benoit ^^ */
input[type="text"] {
	background-color: transparent;
	border: none;
	width: 1.8em;
	outline: none;
	font-size: calc((var(--bHeight)) / 3);
	text-align: center;
	letter-spacing: 1px;
}

#workSet, #breakSet, #stopSet {
	position: absolute;
	left: 5vw;
	width: var(--bWidth);
	height: var(--bHeight);
	line-height: calc((var(--bHeight)) / 2.2 );
	text-align: center;
	font-size: calc((var(--bHeight)) / 2.75);
	overflow: auto;
	border-radius: var(--bHeight);
}

#workSet {
	top: var(--workSetTop);
	background-color: red;
}

#breakSet {
	top: var(--breakSetTop);
	background-color: orange;
}

#stopSet {
	top: var(--chillSetTop);
	background-color: green;
}

#menuSwitch {
	position: absolute;
	right: 5vw;
	height: 2.15vw;
	line-height: 2.15vw;
	top: calc(var(--hSpace) * 3 + var(--bHeight) * 2);
	font-size: 2.5vw;
	z-index: 100;
}

#menuSwitch:hover {
	cursor: help;
}

#menu {
	position: absolute;
	right: 5vw;
	top: calc(var(--hSpace) * 3 + var(--bHeight) * 2);
	width: calc(var(--bWidth) * 1.5);
	height: var(--hWorkZone);
	padding: 0 1vw;
	display: none;
	background-color: whitesmoke;
	font-size: calc(var(--hWorkZone) / 15);
	line-height: calc(var(--hWorkZone) / 50);
	z-index: 50;
	overflow: auto;
	border-radius: 1.1vw;
}

#phaseShower {
	position: absolute;
	left: calc(6vw + var(--bWidth));
	top: var(--workSetTop);
	display: none;
	height: var(--bHeight);
	line-height: var(--bHeight);
	font-size: calc(var(--bHeight) * 0.8);
}

.version {
	position: absolute;
	bottom: 0.6vw;
	right: 0.6vw;
	margin: 0;
	padding: 0;
}

#selectWork, #selectBreak, #selectChill {
	position: absolute;
	left: calc(2.5vw - var(--bHeight) / 4);
	font-size: calc(var(--bHeight) / 2);
	overflow: hidden;
}

#selectWork:hover, #selectBreak:hover, #selectChill:hover {
	cursor: crosshair;
}

#selectWork {
	top: calc(var(--hSpace) * 3 + var(--bHeight) * 2 + var(--bHeight) / 4);
}

#selectBreak {
	top: calc(var(--hSpace) * 3.5 + var(--bHeight) * 3 + var(--bHeight) / 4);
}

#selectChill {
	top: calc(var(--hSpace) * 4 + var(--bHeight) * 4 + var(--bHeight) / 4);
}

#toDoList {
	position: absolute;
	--hTop: calc(var(--hSpace) * 3 + var(--bHeight) * 2);
	top: var(--hTop);
	--width: 50vw;
	left: calc(49vw - var(--width) / 2);
	height: var(--hWorkZone);
	width: var(--width);
	margin: 0;
}

#toDoList-toDo, #toDoList-doing, #toDoList-done {
	position: absolute;
	top: 0;
	left: 0%;
	background-color: red;
	width: 30%;
	height: 100%;
	border-radius: 1.1vw;
}

#toDoList h2{
	position: absolute;
	top: 0;
	margin-top: 0;
	width: 100%;
	height: 2.5vw;
	font-size: 1.75vw;
	line-height: 2.5vw;
	text-align: center;
	background-color: burlywood;
	border-radius: 1.1vw;
}

#toDoList-doing {
	background-color: orange;
	left: 33%;
}

#toDoList-done {
	background-color: green;
	left: 66%;
}

